# libgooglepinyin

./: .gitignore  .hg_archival.txt  .hgignore  .hgtags  CMakeLists.txt  INSTALL
data/: CMakeLists.txt  googlepinyin.pc.in
debian/: changelog  control  copyright  libgooglepinyin0.install  python-googlepinyin.install  rules  watch
debian/patches/: 01-change_the_path.patch  cmake_libraries.patch  series
src/: CMakeLists.txt  matrixsearch.cpp
wrapper/: CMakeLists.txt
wrapper/ibus/: CMakeLists.txt  engine.py  main.py
wrapper/python/: CMakeLists.txt  googlepinyin.py  libgooglepinyin.py
